--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <p>Pitangui - MG</p>
         <div class="social-links" style="margin-top: 1.5rem;">
             <a href="#">Instagram</a>
-            <a href="#">Facebook</a>
+            <a href="#">Whatsapp</a>
         </div>
         <p style="font-size: 0.7rem; margin-top: 2rem; opacity: 0.6;">&copy; 2024 Cervejaria Pilar.</p>
     </footer>
@@ -222,3 +222,4 @@
     </script>
 </body>
 </html>
+
